--- a/Chefs-Conclave/package.json
+++ b/Chefs-Conclave/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@iconify/react": "^4.1.0",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.21.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
+    "react-toastify": "^9.1.2",
     "react-typing-effect": "^2.0.5",
     "sort-by": "^1.2.0"
   },
