--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-lazy-load": "^4.0.1",
     "react-router-dom": "^6.11.0",
+    "react-to-pdf": "^0.0.14",
     "react-toastify": "^9.1.2",
     "react-typing-effect": "^2.0.5",
     "sort-by": "^1.2.0"
